# ParticleLife3D

./: Cargo.toml
src/: buffers.rs  calc_grid.wgsl  camera.rs  compute.wgsl  compute_set.rs  consts.rs  empty_bins.wgsl  lib.rs  main.rs  params.rs  particle.rs  render_set.rs  shader.wgsl  state.rs  test.ipynb  testing.ipynb  varlets.wgsl  vertex.rs
src/render/: camera.rs  gui.rs  mod.rs  render_set.rs  vertex.rs
src/shaders/: calc_grid.wgsl  compute.wgsl  empty_bins.wgsl  reduce.wgsl  shader.wgsl  varlets.wgsl
src/system/: compute_set.rs  consts.rs  mod.rs  params.rs  particle.rs  pipeline.rs  stats.rs
src/utils/: buffers.rs  macros.rs  mod.rs  utils.rs  wgsl_types.rs
