[package]
name = "ParticleLife3D"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.0"
cgmath = "0.18.0"
env_logger = "0.10.0"
futures-intrusive = "0.5.0"
log = "0.4.17"
pollster = "0.3.0"
rand = "0.8.5"
wgpu = "0.15.1"
winit = "0.28.1"
