[package]
name = "ParticleLife3D"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.0"
cgmath = "0.18.0"
csv = "1.2.1"
egui = "0.21.0"
egui-wgpu = "0.21.0"
egui_demo_lib = "0.21.0"
egui_wgpu_backend = "0.22.0"
egui_winit_platform = "0.18.0"
env_logger = "0.10.0"
futures = "0.3.26"
futures-intrusive = "0.5.0"
log = "0.4.17"
pollster = "0.3.0"
rand = "0.8.5"
rand_distr = "0.4.3"
wgpu = "0.15.1"
winit = "0.28.1"
